tdf#110740 Wrong formatting when cutting from the input line

When the input line has the focus, and cutting text with a
keyboard shortcut, first we copy the contents of the cell to
the clipboard, and then immediately overwrite it with the
contents of the input line, which carries the wrong formatting.
Instead, just use the same logic as for SID_CUT (in
ScEditShell::Execute): Copy the cell contents, and delete the
contents of the input line.

Change-Id: I5f3fbdfebdee16d55af05ffcece142cd92918c5e